# event-driven-chat-service

./: .amp.md  .auggie.md  .clinerules  .codebuddy  .cursorrules  .dockerignore  .gitignore  .goosehints  .jules  .kilo  .opencode  .qwen  .shai  .windsurfrules  AGENTS.md  AMAZON_Q.md  CLAUDE.md  CODEX.md  GEMINI.md  README.md  docker-compose.yml  pyproject.toml  template.yaml
.agents/skills/create-prd/: SKILL.md
.agents/skills/generate-tasks/: SKILL.md
.agents/sub-agents/: project-manager.md  ultra-think.md
.bob/: config
.github/: copilot-instructions.md
.qoder/: context.md
.specify/features/DDB-eventbus/: diagram.puml  prd.md  table-schema.puml
.specify/features/backend/: openapi_alpha_v0.1.0_schema.yml  openapi_alpha_v1.3.0_schema.yml  prd.md  tasks.md
.specify/features/dal/: prd.md
.specify/features/frontend/: prd.md  tasks.md
.specify/memory/: constitution.md  diagram.puml  plan.md
.specify/technical-decisions/: README.md  apigw-v1-localstack.md  aws-cloud-provider.md  decision-framework.md  standard-layout.md  why-apigateway.md  why-data-access-layer.md  why-dynamodb.md  why-not-kafka.md  why-not-rabbitmq.md  why-not-redis.md  why-not-sns-sqs.md  why-streamlit.md
commons/: enums.py  responses.py
commons/dal/: README.md
commons/dynamodb/: __init__.py
commons/postgresql/: query_builder.py
scripts/: debug_stack.py
scripts/events/: agent_function_stream_event.json  create_conversation_event.json  delivery_function_stream_event.json  get_channel_messages_event.json  get_channels_event.json  get_conversation_event.json  get_messages_event.json  send_channel_message_event.json  send_message_event.json
simple-websockets-chat-app-1.0.4/: README.md
simple-websockets-chat-app-1.0.4/onconnect/: Makefile  app.py  pyproject.toml
simple-websockets-chat-app-1.0.4/ondisconnect/: Makefile  app.py  pyproject.toml
simple-websockets-chat-app-1.0.4/sendmessage/: Makefile  app.py  pyproject.toml
src/: Makefile  __init__.py  template.yaml
src/commons/: AGENTS.md  cors.py  http_errors.py  repositories.py  responses.py  schemas.py
src/commons/dal/: README.md  __init__.py  dynamodb_repository.py  interface.py  postgresql_repository.py
src/commons/dynamodb/: __init__.py  exceptions.py  repository.py  utils.py
src/commons/postgresql/: query_builder.py
src/frontend/: .dockerignore  AGENTS.md  Dockerfile  agents.md  app.py  config.py  pyproject.toml  websocket_client.py
src/infra/: .dockerignore  AGENTS.md  Dockerfile  README.md  sam_deploy.sh  template-dev.yaml  template-prod.yaml
src/rest_api/: .dockerignore  AGENTS.md  __init__.py  agents.md  pyproject.toml  schemas.py  settings.py
src/rest_api/handlers/: __init__.py  get_channel_messages.py  send_channel_message.py  send_channel_message_websocket.py
src/rest_api/services/: __init__.py  base.py  get_channel_messages.py  send_channel_message.py  send_channel_message_websocket.py
src/rest_api/workers/: __init__.py  agent_worker.py  delivery_worker.py  requirements.txt
src/websocket_api/: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  index.html  local_server.py  pyproject.toml  settings.py
src/websocket_api/onconnect/: app.py  requirements.txt
src/websocket_api/ondisconnect/: app.py
src/websocket_api/sendmessage/: app.py  requirements.txt
tests/: agents.md  conftest.py
tests/backend/: test_api.py  test_messaging.py  test_workers.py
tests/frontend/: test_app.py  test_integration_ws.py  test_websocket.py
tests/integration/: test_infrastructure.py  test_lambda_functions.py
tests/websocket_api/: test_handlers.py
websocket_api/: __init__.py  settings.py  template.yaml
websocket_api/onconnect/: app.py
websocket_api/sendmessage/: app.py
workers/: __init__.py
