[project]
name = "event-driven-chat-service"
version = "0.1.0"
description = "Event-Driven chat service that allows a frontend client to PubSub messages to an event bus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "boto3>=1.35.0",
    "websockets>=13.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "requests>=2.32.0",
    "poethepoet>=0.29.0",
    "pydantic-settings>=2.0.0",
    "boto3-stubs~=1.42.20",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poe.tasks]
format = "black src tests scripts"
format-check = "black --check src tests scripts"

[dependency-groups]
dev = [
    "boto3-stubs>=1.42.21",
    "black>=24.0.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''
