[project]
name = "scalable-chat-frontend"
version = "0.1.0"
description = "Frontend UI for scalable chat service with Streamlit and WebSocket"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.39.0",
    "websockets>=13.0",
    "requests>=2.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.42.23",
    "aiohttp>=3.13.3",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
